--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ html {
 #header .search_btn {
     display: inline-block;
     float:right;
-    height: 46px;
+    height: 46px;           
 }
 
 #header .search_btn .search_icon {
@@ -138,14 +138,16 @@ html {
 
 }
 
-#content .content_section {
+#content .content_section,
+#content .contact_section {
     padding: 64px 16px;
     width:800px;
     margin:0 auto;
 }
 
 #content .content_section .heading,
-#content .tour_section .heading {
+#content .tour_section .heading,
+#content .contact_section .heading {
     text-align: center;
     text-transform: uppercase;
     color: #000;
@@ -155,7 +157,9 @@ html {
 }
 
 #content .content_section .subheading,
-#content .tour_section .subheading {
+#content .tour_section .subheading,
+#content .contact_section .subheading
+ {
     text-align: center;
     color: #000;
     font-size: 15px;
@@ -260,18 +264,18 @@ html {
     margin: 0 -8px;
 }
 
-.place_list .place_item {
+.place_item {
     width: 33.333%;
     float: left;
     padding: 0 8px;
 }
 
-.place_item .place_img {
+.place_img {
     width:100%;
     display: block;
 }
 
-.place_item .place_img:hover {
+.place_img:hover {
     opacity: 0.6;
     cursor: pointer;
 }
@@ -281,7 +285,7 @@ html {
     padding: 0px 16px;
 }
 
-.place_content .place_name {
+.place_name {
     color: #000;
     font-weight: bold;
     margin: 15px 0px;
@@ -289,30 +293,241 @@ html {
     letter-spacing: 1px;
 }
 
-.place_content .place_time {
+.place_time {
     color: #000;
     opacity: 0.6;
 }
 
-.place_content .place_decription {
+.place_decription {
     line-height: 1.4;
     margin: 15px 0px;
 }
 
-.place_content .place_btn {
+.place_btn {
     text-decoration: none;
     color: #fff;
     background-color: #000;
     padding: 8px 16px;
     display: inline-block;
     margin-bottom: 16px;
+    border: none;
 }
 
-.place_content .place_btn:hover {
+.place_btn:hover {
     background-color: #ccc;
     color: #000;
 }
 
-#footer {
+/* contact */
 
+.contact_content {
+    padding:32px 0px;
+}
+
+.contact_info {
+    float: left;
+    width: 45%;
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 16px;
+}
+
+.contact_form {
+    float: right;
+}
+
+.form-info {
+    width: 100%;
+}
+
+.contact-name {
+    width: 50%;
+    float: left;
+    margin-left: -8px;
+}
+
+.contact-email {
+    float: right;
+    width: 50%;
+    margin-right: -8px;
+}
+
+.contact-name, 
+.contact-email,
+.contact-message {
+    height: 40px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    font-size: 15px;
+}
+
+.contact-message {
+    width: 104%;
+    margin-left: -8px;
+    margin-top: 8px;
+}
+
+.contact-btn {
+    margin: 16px 0;
+    padding: 10px 16px;
+    float: right;
+    margin-right: -8px;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    font-size: 15px;
+}
+
+.contact-btn:hover {
+    background-color: #ccc;
+    color: #000;
+    cursor: pointer;
+}
+
+.map {
+    width: 100%;
+    filter: grayscale(50%);
+}
+
+#footer {
+    padding: 64px 16px;
+}
+
+.social-icon {
+    text-align: center;
+}
+
+.social-icon i {
+    font-size: 24px;
+}
+
+.social-icon i:hover {
+    cursor: pointer;
+    opacity: 0.6;
+}
+
+.copyright {
+    font-size: 15px;
+    padding: 15px 0px;
+    text-align: center;
+    color: #000;
+    opacity: 0.6;
+}
+
+.copyright a {
+    color: #000;
+}
+
+.modal {
+    position: fixed;
+    top:0;
+    left:0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    /* display: flex; */
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.open {
+    display: flex;
+}
+
+.modal .modal-container {
+    width: 800px;
+    min-height: 200px;
+    background-color: #fff;
+    position: relative;
+    animation: modal_Animation ease 0.4s;
+}
+
+.modal-container .modal-close {
+    position: absolute;
+    right: 0;
+    top:0;
+    padding: 8px 16px
+}
+
+.modal-container .modal-close:hover {
+    background-color: #ccc;
+    cursor: pointer;
+}
+
+.modal-container .modal-close .close-icon {
+    font-size: 12px;
+    display: block;
+    height: 36px;
+    line-height: 36px;  
+}
+
+.modal-container .modal-header {
+    background-color: #009688;
+    color: #fff;
+    font-size: 30px;
+    height: 130px;
+    line-height: 130px;
+    text-align: center;
+    letter-spacing: 4px;
+}
+
+.modal-container .modal-body {
+    padding: 16px;
+}
+
+.modal-container .modal-body .modal-label {
+    display: block;
+    font-size: 15px;
+}
+
+.modal-container .modal-body .modal-input {
+    width: 100%;
+    min-height: 40px;
+    padding: 8px;
+    margin-top: 12px;
+    margin-bottom: 24px;
+}
+
+.modal-container .modal-body .modal-btn {
+    width: 100%;
+    height: 54px;
+    background-color: #009688;
+    padding: 16px;
+    margin-bottom: 16px;
+    font-size: 15px;
+    color: #fff;
+    border: none;
+    text-transform: uppercase;
+}
+
+.modal-container .modal-body .modal-btn:hover {
+    background-color: #ccc;
+    color: #000;
+}
+
+.modal-container .modal-footer {
+    width: 100%;
+}
+
+.modal-container .modal-footer .modal-help {
+    width: 100%;
+    text-align: right;
+    margin: 18px 0;
+}
+
+.modal-footer .modal-help a {
+    color: #2196F3;
+}
+
+@keyframes modal_Animation {
+    from {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(-0px);
+    }
 }
