--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -15,6 +15,10 @@
 /* mobile */
 @media (max-width: 739px) {
 
+    #header {
+        overflow: hidden;
+    }
+
     .nav > li {
         display: block;    
     }
@@ -35,5 +39,90 @@
 
     .nav {
         width: 100%;
+    }
+
+    .nav .subnav {
+        position: initial;
+        background-color: rgb(53, 51, 51);
+    }
+
+    .nav .subnav a {
+        color: #fff;
+        padding: 5px 40px;
+    }
+
+    #slider .slider-content .slogan {
+        text-shadow: 0 0 1px #000;
+    }
+
+    .member,
+    .place-item {
+        float: none;
+        width: 100%;
+    }
+
+    .place-list .place-item {
+        margin-bottom: 16px;
+    }
+
+    .place-list .place-item:last-child {
+        margin-bottom: 0px;
+    }
+
+    .member .member-img {
+        width: 85%;
+        height: 85%;
+        margin: 0 auto;
+    }
+
+    .member .member-img img {
+        margin-bottom: 16px;
+    }
+
+    .member .member-img img:last-child {
+        margin-bottom: 0px;
+    }
+
+    .place-btn {
+        padding: 13px 16px;
+        width: 100%;
+    }
+
+    .contact-info,
+    .contact-form,
+    .contact-name,
+    .contact-email {
+        width: 100%;
+    }
+
+    .contact-info {
+        line-height: 2.5;
+    }
+
+    .contact-name,
+    .contact-email {
+        margin-top: 10px;
+    }
+
+    .contact-name input,
+    .contact-email input,
+    .contact-mess input {
+        height: 44px;
+    }
+
+    .contact-btn .send-mess {
+        width: 100%;
+        height: 44px;
+    }
+
+    #footer .social i {
+        margin: 0 12px;
+        font-size: 36px;
+        margin-bottom: 20px;
+    }
+
+    #footer .copyright a {
+        margin-left: 10px;
+        font-size: 20px;
     }
 }
