--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ html {
     left: 0;
     width: 100%;
     z-index: 1;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .nav {
@@ -134,6 +134,7 @@ html {
 
 #slider .slider-content .desc {
     font-size: 15px;
+    text-shadow: 0 0 2px #000;
 }
 
 #content {
